--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,9 @@
     <!-- 播放 & 下载区 -->
     <div class="card">
       <h2>在线播放 / 下载</h2>
-      <video id="player" controls playsinline class="player"></video>
+      <video id="player" controls playsinline muted class="player"></video> <!-- NEW: 默认静音提升自动播放成功率 -->
       <div class="row">
-        <!-- 如果未来有 m3u8，可用它播放；否则会自动用 MP4 播放 -->
         <a id="playM3U8" class="btn" href="#" target="_blank" rel="noopener">用 m3u8 播放</a>
-        <!-- ⭐ 下载按钮：我们会把它指向 /download/{objectPath}?filename=xxx，实现真正“保存为” -->
         <a id="downloadMp4" class="btn" href="#" target="_blank" rel="noopener">下载 MP4</a>
       </div>
       <div id="nowPlaying" class="muted"></div>
@@ -47,7 +45,7 @@
   </div>
 
 <script>
-  // ===== 你的后端域名（VPS 经 Tunnel 暴露的 API）=====
+  // ===== 后端 API 域名 =====
   const API_BASE = 'https://mmx.multmatrix.com';
 
   // ===== DOM 引用 =====
@@ -66,28 +64,25 @@
   };
 
   // ===== 全局状态 =====
-  let es = null;              // EventSource 句柄
-  let lastSnapshot = null;    // 最近一次状态（可用于恢复播放）
-  let lastTitle = 'video';    // ⭐ 全局保存“将要播放/下载”的标题（多处更新）
-  let lastObjectPath = null;  // 形如 "ADN-699/ADN-699.mp4" 或 "50.mp4"（相对 data/）
-  let lastMp4Url = null;      // 可直接访问的 MP4 绝对地址（/files/**）
+  let es = null;
+  let lastSnapshot = null;
+  let lastTitle = 'video';
+  let lastObjectPath = null;
+  let lastMp4Url = null;
 
   // ===== 工具函数 =====
   function absUrl(u) {
     return u && /^https?:\/\//i.test(u) ? u : `${API_BASE}${u || ''}`;
   }
-  // 清洗为合法文件名
   function sanitizeFilename(name) {
     if (!name) return 'video';
     return String(name).trim().replace(/[\\/:*?"<>|]/g, '_');
   }
-  // 从路径取文件名
   function fileNameFromPath(p) {
     if (!p) return null;
     const parts = String(p).replace(/\\/g, '/').split('/');
     return parts[parts.length - 1] || null;
   }
-  // 从 URL / 路径推断标题（去掉扩展名）
   function titleFromUrl(u) {
     try {
       const url = new URL(u);
@@ -98,7 +93,6 @@
       return base ? base.replace(/\.(mp4|mkv|webm|mov|m4v)$/i, '') : null;
     }
   }
-  // 从 result.path 里提取相对 data/ 的 objectPath（可能带子目录）
   function objectPathFromResultPath(p) {
     if (!p) return null;
     let s = String(p).replace(/\\/g, '/');
@@ -107,12 +101,10 @@
     else if (s.startsWith('data/')) s = s.slice('data/'.length);
     return s;
   }
-  // 由 result 生成 /files/** 的可访问直链
   function toFileUrlFromResult(result) {
     const objPath = objectPathFromResultPath(result && result.path);
     return objPath ? `${API_BASE}/files/${objPath}` : null;
   }
-  // 把任意对象打印到“任务状态”框（便于调试/观测）
   function setStatus(obj) {
     els.statusBox.textContent = JSON.stringify(obj, null, 2);
   }
@@ -130,39 +122,26 @@
     }
   }
 
-  // ===== 当资源已发布（PUBLISHED）时的 UI 渲染（播放 & 下载）=====
-  function handlePublished(snapshotLike) {
-    // 可能包含 mp4Url / m3u8Url（本项目一般只有 mp4）
-    const m3u8 = snapshotLike.m3u8Url ? absUrl(snapshotLike.m3u8Url) : null;
-    const mp4  = snapshotLike.mp4Url  ? absUrl(snapshotLike.mp4Url)  : null;
+  // ===== NEW：平滑切源（保留进度/状态） =====
+  function switchSourceKeepPosition(nextUrl){
+    if(!nextUrl) return;
+    const v = els.player;
+    const wasPaused = v.paused;
+    const t = v.currentTime || 0;
 
-    if (m3u8) {
-      els.playM3U8.href = m3u8;
-      setupHls(m3u8);
-    }
+    v.src = absUrl(nextUrl);
+    v.load();
+    const onReady = () => {
+      try { v.currentTime = Math.max(0, Math.min(t, v.duration || t)); } catch {}
+      if (!wasPaused) v.play().catch(()=>{});
+      v.removeEventListener('loadedmetadata', onReady);
+    };
+    v.addEventListener('loadedmetadata', onReady);
 
-    if (mp4) {
-      // 播放
-      els.player.src = mp4;
-      els.player.play().catch(()=>{});
-      els.nowPlaying.textContent = `正在播放：${lastTitle}.mp4`;
-    }
-
-    // 设置下载按钮（如果我们已经知道 objectPath，优先走 /download 强制保存）
-    if (lastObjectPath) {
-      const downloadHref = `${API_BASE}/download/${encodeURIComponent(lastObjectPath)}?filename=${encodeURIComponent(lastTitle)}.mp4`;
-      els.downloadMp4.href = downloadHref;
-      els.downloadMp4.removeAttribute('download'); // 让服务端控制 attachment
-      els.downloadMp4.target = '_self';            // 避免新开页（可选）
-    } else if (mp4) {
-      // 兜底：没有 objectPath 时，直接给 /files/** 链接（很多浏览器会直接在线播放，不保证必下载）
-      els.downloadMp4.href = mp4;
-      els.downloadMp4.setAttribute('download', `${lastTitle}.mp4`);
-      els.downloadMp4.target = '_blank';
-    }
+    els.nowPlaying.textContent = `正在播放：${fileNameFromPath(nextUrl) || 'video.mp4'}`;
   }
 
-  // ===== SSE 订阅：接收 snapshot / progress / finished 等 =====
+  // ===== SSE 订阅（两个信号：play / finished）===== // NEW
   function subscribeJob(jobId) {
     if (!jobId) return alert('没有 jobId');
     if (es) es.close();
@@ -171,21 +150,69 @@
     es.onmessage = (ev) => {
       let msg;
       try { msg = JSON.parse(ev.data); } catch { return; }
-      // 打印当前事件（方便检查）
       setStatus(msg);
 
-      // ---- 标题更新：尽可能早（probe/snapshot）& 最晚（finished）兜底 ----
+      // 1) 首帧快照：仅用于展示状态，不做自动播放（让“play”信号来决定） // NEW
       if (msg.type === 'snapshot') {
         lastSnapshot = msg;
-        const t = (msg.info && (msg.info.title || (msg.info.details && msg.info.details.title)))
-                  || lastTitle;
+        const t = (msg.info && (msg.info.title || (msg.info.details && msg.info.details.title))) || lastTitle;
         if (t) lastTitle = sanitizeFilename(t);
-        // 如果已经是 PUBLISHED（刷新后重连 SSE 的情况），直接渲染
-        if (msg.status === 'PUBLISHED') handlePublished(msg);
+        // 如果你希望“刷新后重连 SSE 且已经完成”的情况也能马上播放，可在此判断：
+        if (msg.status === 'finished' || msg.status === 'PUBLISHED') {
+          const pb = msg.result && msg.result.playback || {};
+          const finalUrl = pb.withSubUrl || pb.videoUrl || pb.originalUrl || (msg.result && msg.result.path);
+          if (finalUrl) switchSourceKeepPosition(finalUrl);
+        }
+        return;
       }
 
+      // 2) 中途播放信号：让前端立刻切到指定 URL，但不结束（用于先播原视频 / 字幕就绪后切有字幕） // NEW
+      if (msg.type === 'play' && msg.url) {
+        switchSourceKeepPosition(msg.url);
+        // 不关闭 SSE，继续等最终 finished
+        return;
+      }
+
+      // 3) 最终信号：切到最终版本并收尾（关闭 SSE） // NEW
+      if (msg.type === 'finished' && msg.result) {
+        // 兼容：后端可把最终文件放在 playback.withSubUrl / playback.videoUrl / playback.originalUrl / result.path
+        const pb = msg.result.playback || {};
+        const finalUrl = pb.withSubUrl || pb.videoUrl || pb.originalUrl || msg.result.path;
+        if (finalUrl) switchSourceKeepPosition(finalUrl);
+
+        // 下载按钮（优先 /download 强制保存）
+        lastObjectPath = objectPathFromResultPath(msg.result.path);
+        lastMp4Url = toFileUrlFromResult(msg.result) || (lastObjectPath ? `${API_BASE}/files/${lastObjectPath}` : null);
+        if (lastObjectPath) {
+          const dl = `${API_BASE}/download/${encodeURIComponent(lastObjectPath)}?filename=${encodeURIComponent(lastTitle)}.mp4`;
+          els.downloadMp4.href = dl;
+          els.downloadMp4.removeAttribute('download');
+          els.downloadMp4.target = '_self';
+        } else if (lastMp4Url) {
+          els.downloadMp4.href = lastMp4Url;
+          els.downloadMp4.setAttribute('download', `${lastTitle}.mp4`);
+          els.downloadMp4.target = '_blank';
+        }
+
+        if (es) { es.close(); es = null; }
+        return;
+      }
+
+      // 4) 兼容：如果后端仍会发 published，把它当作“play”处理（不中断） // NEW
+      if (msg.type === 'published' && msg.result) {
+        const pb = msg.result.playback || {};
+        const midUrl = pb.withSubUrl || pb.videoUrl || pb.originalUrl;
+        if (midUrl) switchSourceKeepPosition(midUrl);
+        return;
+      }
+
+      if (msg.type === 'failed' || msg.type === 'canceled') {
+        if (es) { es.close(); es = null; }
+        return;
+      }
+
+      // 进度等其他事件：保持你的原逻辑
       if (msg.type === 'progress') {
-        // 你可以在这里做进度条展示；本示例仅把一行进度追加到状态框顶部
         const percent = msg.percent != null ? Number(msg.percent).toFixed(1) : null;
         const summary = [
           `[${msg.backend || '-'}][${msg.stage || '-'}]`,
@@ -193,48 +220,22 @@
           msg.speedHuman ? ` | ${msg.speedHuman}` : '',
         ].join('');
         els.statusBox.textContent = (summary + '\n' + els.statusBox.textContent);
-      }
-
-      if (msg.type === 'finished' && msg.result) {
-        // 记录 objectPath & mp4 直链
-        lastObjectPath = objectPathFromResultPath(msg.result.path);
-        lastMp4Url = toFileUrlFromResult(msg.result);
-
-        // 最后一次兜底修正标题（details.title 或 path 文件名）
-        const t2 = (msg.result.details && msg.result.details.title)
-                  || (lastObjectPath && fileNameFromPath(lastObjectPath).replace(/\.(mp4|mkv|webm|mov|m4v)$/i, ''))
-                  || lastTitle;
-        lastTitle = sanitizeFilename(t2);
-
-        // 组装“可播放/可下载”的快照对象并渲染
-        const snap = {
-          status: 'PUBLISHED',
-          mp4Url: lastMp4Url || (lastObjectPath ? `${API_BASE}/files/${lastObjectPath}` : null),
-          m3u8Url: null,
-        };
-        handlePublished(snap);
-
-        // ⭐ 下载完成后，SSE 可直接关闭，避免继续推送心跳等
-        if (es) { es.close(); es = null; }
-      }
-
-      if (msg.type === 'failed' || msg.type === 'canceled') {
-        if (es) { es.close(); es = null; }
+        return;
       }
     };
 
     es.onerror = () => {
-      // 网络/代理异常时，SSE 可能自动重连；这里先关闭（按需改成忽略）
-      if (es) { es.close(); es = null; }
+      // 可选：做自动重连；此处保持简单
     };
+
+    return es;
   }
 
-  // ===== 创建任务（先探测→弹窗确认→确认后开始下载→订阅 SSE）=====
+  // ===== 创建任务（先探测→确认→开始下载→订阅 SSE）=====
   async function createJobByUrl() {
     const url = els.videoUrl.value.trim();
     if (!url) return alert('请填写视频链接');
 
-    // Step1：创建任务（后端会立即做 probe，并返回 info）
     const res = await fetch(`${API_BASE}/api/jobs`, {
       method: 'POST',
       headers: {'Content-Type': 'application/json'},
@@ -246,11 +247,9 @@
     const jobId = data.jobId;
     els.jobId.value = jobId;
 
-    // 从 probe 中拿标题（第一优先），否则从 URL 推断（第二优先），最后兜底 'video'
     const i = (data && data.probe && data.probe.info) || {};
     lastTitle = sanitizeFilename(i.title || titleFromUrl(url) || 'video');
 
-    // 弹确认框（含标题/大小/时长）
     const sizeHuman = i.size_human || '未知';
     const durationHuman = i.duration_str || '未知';
     const ok = window.confirm(
@@ -258,14 +257,13 @@
     );
     if (!ok) return;
 
-    // Step2：确认下载
     const res2 = await fetch(`${API_BASE}/api/jobs/${jobId}/confirm`, { method: 'POST' });
     const data2 = await res2.json();
     if (!res2.ok || !data2.ok) {
       return alert(data2.error || data2.message || '无法开始下载');
     }
 
-    // Step3：订阅 SSE，等待进度/完成事件
+    // 订阅 SSE：等待后端的 "play" 与 "finished" 两个信号 // NEW
     subscribeJob(jobId);
   }
 
@@ -276,9 +274,11 @@
     const res = await fetch(`${API_BASE}/api/jobs/${id}`);
     const data = await res.json();
     setStatus(data);
-    if (data.status === 'PUBLISHED') {
-      // 如果后端快照里直接带 mp4Url/m3u8Url，也可以渲染
-      handlePublished(data);
+    // 如果服务端在快照中就已经提供最终可播地址，也可以手动触发一次播放
+    if (data.status === 'finished' || data.status === 'PUBLISHED') {
+      const pb = data.result && data.result.playback || {};
+      const finalUrl = pb.withSubUrl || pb.videoUrl || pb.originalUrl || (data.result && data.result.path);
+      if (finalUrl) switchSourceKeepPosition(finalUrl);
     }
   }
 
@@ -288,13 +288,15 @@
   els.sseBtn.onclick = () => subscribeJob((els.jobId.value || '').trim());
   els.stopBtn.onclick = () => { if (es) es.close(); es = null; };
 
-  // 如果“用 m3u8 播放”被点击，但当前没有 m3u8，就退化用 MP4 播放
+  // “用 m3u8 播放”兜底
   els.playM3U8.addEventListener('click', (e) => {
     if (!lastSnapshot) return;
     const m3u8 = lastSnapshot.m3u8Url ? absUrl(lastSnapshot.m3u8Url) : null;
     if (!m3u8) {
       e.preventDefault();
       if (lastMp4Url) { els.player.src = lastMp4Url; els.player.play().catch(()=>{}); }
+    } else {
+      setupHls(m3u8);
     }
   });
 </script>
