--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
     <!-- 播放 & 下载区 -->
     <div class="card">
       <h2>在线播放 / 下载</h2>
-      <video id="player" controls playsinline muted class="player"></video>
+<!--       <video id="player" controls playsinline muted class="player"></video> -->
+      <video id="player" controls playsinline muted crossorigin="anonymous" class="player"></video>
       <div class="row">
         <a id="playM3U8" class="btn" href="#" target="_blank" rel="noopener">用 m3u8 播放</a>
         <a id="downloadMp4" class="btn" href="#" target="_blank" rel="noopener">下载 MP4</a>
